chore: settling the ignore file for eliminating the dataset's content

--- a/Preprocessing.ipynb
+++ b/Preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "30008c86",
    "metadata": {},
    "outputs": [
@@ -25,6 +25,7 @@
     "from pydub import AudioSegment\n",
     "from pydub.silence import split_on_silence\n",
     "\n",
+    "\n",
     "def load_audio(file_path, target_sr=16000):\n",
     "    if file_path.lower().endswith(\".mp3\"):\n",
     "        audio = AudioSegment.from_file(file_path, format=\"mp3\").set_channels(1)\n",
@@ -36,11 +37,14 @@
     "        y, sr = librosa.load(file_path, sr=target_sr)\n",
     "        return y, sr\n",
     "\n",
+    "\n",
     "def normalize_volume(samples):\n",
     "    return librosa.util.normalize(samples)\n",
     "\n",
+    "\n",
     "def reduce_noise(samples, sr):\n",
     "    return nr.reduce_noise(y=samples, sr=sr)\n",
+    "\n",
     "\n",
     "# removing background noise\n",
     "def bandpass_filter(samples, sr, low=80, high=8000):\n",
@@ -52,19 +56,21 @@
     "\n",
     "\n",
     "def remove_silence_from_array(y, sr, silence_thresh=-35, min_silence_len=300):\n",
-    " \n",
+    "\n",
     "    temp_path = \"temp_for_silence.wav\"\n",
     "    sf.write(temp_path, y, sr)\n",
     "\n",
     "    sound = AudioSegment.from_wav(temp_path)\n",
-    "    chunks = split_on_silence(sound,\n",
-    "                               min_silence_len=min_silence_len,\n",
-    "                               silence_thresh=silence_thresh,\n",
-    "                               keep_silence=100)\n",
+    "    chunks = split_on_silence(\n",
+    "        sound,\n",
+    "        min_silence_len=min_silence_len,\n",
+    "        silence_thresh=silence_thresh,\n",
+    "        keep_silence=100,\n",
+    "    )\n",
     "\n",
     "    if not chunks:\n",
     "        print(\"No speech detected \")\n",
-    "        return y \n",
+    "        return y\n",
     "\n",
     "    combined = AudioSegment.empty()\n",
     "    for chunk in chunks:\n",
@@ -73,6 +79,7 @@
     "    os.remove(temp_path)\n",
     "    samples = np.array(combined.get_array_of_samples()).astype(np.float32) / 32768.0\n",
     "    return samples\n",
+    "\n",
     "\n",
     "def preprocess_audio(file_path, output_path):\n",
     "    print(f\" Processing: {file_path}\")\n",
@@ -89,6 +96,7 @@
     "    except Exception as e:\n",
     "        print(f\" Error processing {file_path}: {e}\")\n",
     "\n",
+    "\n",
     "def preprocess_folder(folder_path=\"data\", output_folder=\"processed\"):\n",
     "    if not os.path.exists(output_folder):\n",
     "        os.makedirs(output_folder)\n",
@@ -101,6 +109,7 @@
     "            input_path = os.path.join(folder_path, filename)\n",
     "            output_path = os.path.join(output_folder, filename.replace(\".mp3\", \".wav\"))\n",
     "            preprocess_audio(input_path, output_path)\n",
+    "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    preprocess_folder(\"data\", \"processed\")"
