--- a/Preprocessing.ipynb
+++ b/Preprocessing.ipynb
@@ -10,9 +10,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Found files: ['common_voice_en_250.mp3']\n",
-      " Processing: data/common_voice_en_250.mp3\n",
-      "Saved to: processed/common_voice_en_250.wav\n"
+      "Found 209791 files\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing files:   0%|          | 0/209791 [00:00<?, ?it/s]"
      ]
     }
    ],
@@ -22,20 +27,30 @@
     "import numpy as np\n",
     "import noisereduce as nr\n",
     "import soundfile as sf\n",
+    "from scipy.signal import butter, sosfilt\n",
+    "from tqdm import tqdm\n",
+    "from multiprocessing import Pool\n",
+    "import time\n",
     "from pydub import AudioSegment\n",
-    "from pydub.silence import split_on_silence\n",
     "\n",
     "\n",
     "def load_audio(file_path, target_sr=16000):\n",
-    "    if file_path.lower().endswith(\".mp3\"):\n",
-    "        audio = AudioSegment.from_file(file_path, format=\"mp3\").set_channels(1)\n",
-    "        samples = np.array(audio.get_array_of_samples()).astype(np.float32) / 32768.0\n",
-    "        sr = audio.frame_rate\n",
-    "        y = librosa.resample(samples, orig_sr=sr, target_sr=target_sr)\n",
-    "        return y, target_sr\n",
-    "    else:\n",
-    "        y, sr = librosa.load(file_path, sr=target_sr)\n",
-    "        return y, sr\n",
+    "    try:\n",
+    "        if file_path.lower().endswith(\".mp3\"):\n",
+    "            audio = AudioSegment.from_file(file_path, format=\"mp3\").set_channels(1)\n",
+    "            samples = (\n",
+    "                np.array(audio.get_array_of_samples()).astype(np.float32) / 32768.0\n",
+    "            )\n",
+    "            sr = audio.frame_rate\n",
+    "            if sr != target_sr:\n",
+    "                samples = librosa.resample(samples, orig_sr=sr, target_sr=target_sr)\n",
+    "            return samples, target_sr\n",
+    "        else:\n",
+    "            y, sr = librosa.load(file_path, sr=target_sr, mono=True)\n",
+    "            return y, sr\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error loading {file_path}: {e}\")\n",
+    "        return None, None\n",
     "\n",
     "\n",
     "def normalize_volume(samples):\n",
@@ -43,48 +58,34 @@
     "\n",
     "\n",
     "def reduce_noise(samples, sr):\n",
-    "    return nr.reduce_noise(y=samples, sr=sr)\n",
+    "    return nr.reduce_noise(y=samples, sr=sr, prop_decrease=0.5)\n",
     "\n",
     "\n",
-    "# removing background noise\n",
     "def bandpass_filter(samples, sr, low=80, high=8000):\n",
-    "    fft = librosa.stft(samples)\n",
-    "    freqs = librosa.fft_frequencies(sr=sr)\n",
-    "    mask = (freqs >= low) & (freqs <= high)\n",
-    "    fft[~mask, :] = 0\n",
-    "    return librosa.istft(fft)\n",
+    "    sos = butter(10, [low, high], btype=\"band\", fs=sr, output=\"sos\")\n",
+    "    return sosfilt(sos, samples)\n",
     "\n",
     "\n",
     "def remove_silence_from_array(y, sr, silence_thresh=-35, min_silence_len=300):\n",
-    "\n",
-    "    temp_path = \"temp_for_silence.wav\"\n",
-    "    sf.write(temp_path, y, sr)\n",
-    "\n",
-    "    sound = AudioSegment.from_wav(temp_path)\n",
-    "    chunks = split_on_silence(\n",
-    "        sound,\n",
-    "        min_silence_len=min_silence_len,\n",
-    "        silence_thresh=silence_thresh,\n",
-    "        keep_silence=100,\n",
+    "    non_silent = librosa.effects.split(\n",
+    "        y, top_db=-silence_thresh, frame_length=2048, hop_length=512\n",
     "    )\n",
-    "\n",
-    "    if not chunks:\n",
-    "        print(\"No speech detected \")\n",
+    "    if not non_silent.size:\n",
+    "        print(\"No speech detected\")\n",
     "        return y\n",
-    "\n",
-    "    combined = AudioSegment.empty()\n",
-    "    for chunk in chunks:\n",
-    "        combined += chunk\n",
-    "\n",
-    "    os.remove(temp_path)\n",
-    "    samples = np.array(combined.get_array_of_samples()).astype(np.float32) / 32768.0\n",
-    "    return samples\n",
+    "    return np.concatenate([y[start:end] for start, end in non_silent])\n",
     "\n",
     "\n",
     "def preprocess_audio(file_path, output_path):\n",
-    "    print(f\" Processing: {file_path}\")\n",
+    "    if os.path.exists(output_path):\n",
+    "        print(f\"Skipping {file_path}: already processed\")\n",
+    "        return\n",
+    "    print(f\"Processing: {file_path}\")\n",
+    "    start_time = time.time()\n",
     "    try:\n",
     "        y, sr = load_audio(file_path)\n",
+    "        if y is None or sr is None:\n",
+    "            return\n",
     "\n",
     "        y = reduce_noise(y, sr)\n",
     "        y = normalize_volume(y)\n",
@@ -92,23 +93,38 @@
     "        y = remove_silence_from_array(y, sr)\n",
     "\n",
     "        sf.write(output_path, y, sr)\n",
-    "        print(f\"Saved to: {output_path}\")\n",
+    "        print(f\"Saved to: {output_path} in {time.time() - start_time:.2f}s\")\n",
     "    except Exception as e:\n",
-    "        print(f\" Error processing {file_path}: {e}\")\n",
+    "        print(f\"Error processing {file_path}: {e}\")\n",
+    "\n",
+    "\n",
+    "def preprocess_audio_wrapper(args):\n",
+    "    file_path, output_path = args\n",
+    "    preprocess_audio(file_path, output_path)\n",
     "\n",
     "\n",
     "def preprocess_folder(folder_path=\"data\", output_folder=\"processed\"):\n",
     "    if not os.path.exists(output_folder):\n",
     "        os.makedirs(output_folder)\n",
     "\n",
-    "    files = os.listdir(folder_path)\n",
-    "    print(f\" Found files: {files}\")\n",
+    "    files = [f for f in os.listdir(folder_path) if f.lower().endswith((\".wav\", \".mp3\"))]\n",
+    "    print(f\"Found {len(files)} files\")\n",
     "\n",
-    "    for filename in files:\n",
-    "        if filename.lower().endswith((\".wav\", \".mp3\")):\n",
-    "            input_path = os.path.join(folder_path, filename)\n",
-    "            output_path = os.path.join(output_folder, filename.replace(\".mp3\", \".wav\"))\n",
-    "            preprocess_audio(input_path, output_path)\n",
+    "    tasks = [\n",
+    "        (\n",
+    "            os.path.join(folder_path, f),\n",
+    "            os.path.join(output_folder, f.replace(\".mp3\", \".wav\")),\n",
+    "        )\n",
+    "        for f in files\n",
+    "    ]\n",
+    "\n",
+    "    with Pool(processes=os.cpu_count() - 1) as pool:\n",
+    "        for _ in tqdm(\n",
+    "            pool.imap_unordered(preprocess_audio_wrapper, tasks),\n",
+    "            total=len(tasks),\n",
+    "            desc=\"Processing files\",\n",
+    "        ):\n",
+    "            pass\n",
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
@@ -118,7 +134,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "myenv",
+   "display_name": "ML",
    "language": "python",
    "name": "python3"
   },
@@ -132,7 +148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.20"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
