fix: fixing the file paths in the notebooks

--- a/notebooks/data_filtering.ipynb
+++ b/notebooks/data_filtering.ipynb
@@ -16,13 +16,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "38bd9639",
    "metadata": {},
    "outputs": [],
    "source": [
-    "BASE_INPUT_DIR = \"./data\"\n",
-    "OUTPUT_DIR = \"./filtered\"\n",
+    "BASE_INPUT_DIR = \"../data_raw\"\n",
+    "OUTPUT_DIR = \"../data_filtered\"\n",
     "SUPPORTED_EXTENSIONS = (\n",
     "    \".wav\",\n",
     "    \".mp3\",\n",
