fix: updating the extraction to include the spectral contrast, tempo, and chrome to widen our feature dimensions

--- a/notebooks/feature_extraction.ipynb
+++ b/notebooks/feature_extraction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "5602e0f9",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "6dc8c4a3",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "f369914d",
    "metadata": {},
    "outputs": [],
@@ -69,11 +69,15 @@
     "        )\n",
     "        features[\"spectral_rolloff\"] = np.mean(self.extract_spectral_rolloff(audio))\n",
     "        features[\"spectral_flatness\"] = np.mean(self.extract_spectral_flatness(audio))\n",
+    "        features[\"spectral_contrast\"] = self.extract_spectral_contrast(audio)\n",
+    "\n",
     "        features[\"mfcc\"] = self.extract_mfcc(audio)\n",
     "        features[\"mel_spectrogram\"] = np.mean(self.mel_spectrogram(audio))\n",
     "        features[\"spectrogram\"] = np.mean(self.extract_spectrogram(audio))\n",
-    "        \n",
+    "\n",
     "        # Statistical features\n",
+    "        features[\"chroma\"] = self.extract_chroma(audio)\n",
+    "        features[\"tonnetz\"] = self.extract_tonnetz(audio)\n",
     "        features[\"cqt\"] = np.mean(self.extract_cqt(audio))\n",
     "        features[\"pitch\"] = np.mean(self.extract_pitch(audio))\n",
     "        features[\"tempo\"] = self.extract_tempo(audio)\n",
@@ -157,7 +161,8 @@
     "\n",
     "    def extract_spectrogram(self, audio):\n",
     "        spectrogram = librosa.amplitude_to_db(\n",
-    "            self.compute_spectrogram(audio), ref=np.max\n",
+    "            np.abs(self.compute_spectrogram(audio)),\n",
+    "            ref=np.max,  # Apply np.abs to avoid complex input warning\n",
     "        )\n",
     "        return (\n",
     "            spectrogram\n",
@@ -169,7 +174,7 @@
     "        mel_spec = librosa.feature.melspectrogram(\n",
     "            y=audio, sr=self.sr, hop_length=self.hop_length, n_mels=128\n",
     "        )\n",
-    "        return mel_spec[0] if mel_spec.size > 0 else np.zeros(1)\n",
+    "        return mel_spec if mel_spec.size > 0 else np.zeros((128, 1))\n",
     "\n",
     "    def extract_mfcc(self, audio, n_mfcc=13):\n",
     "        mfccs = librosa.feature.mfcc(\n",
@@ -193,7 +198,6 @@
     "\n",
     "    def extract_pitch(self, audio):\n",
     "        pitches, magnitudes = librosa.piptrack(y=audio, sr=self.sr)\n",
-    "        # Extract pitch values where magnitude is non-zero\n",
     "        pitch_values = pitches[magnitudes > 0]\n",
     "        return pitch_values if pitch_values.size > 0 else np.array([0.0])\n",
     "\n",
@@ -202,29 +206,48 @@
     "        return np.mean(tonnetz, axis=1) if tonnetz.size > 0 else np.zeros(6)\n",
     "\n",
     "    def extract_tempo(self, audio):\n",
-    "        tempo = librosa.beat.tempo(y=audio, sr=self.sr)[0]\n",
-    "        return tempo if not np.isnan(tempo) else 0.0\n",
+    "        try:\n",
+    "            tempo = librosa.feature.rhythm.tempo(y=audio, sr=self.sr)[\n",
+    "                0\n",
+    "            ]  # Updated to use new path\n",
+    "            return tempo if not np.isnan(tempo) else 0.0\n",
+    "        except:\n",
+    "            return 0.0\n",
     "\n",
     "    def extract_beat_interval(self, audio):\n",
-    "        tempo, beat_frames = librosa.beat.beat_track(y=audio, sr=self.sr)\n",
-    "        beat_times = librosa.frames_to_time(beat_frames, sr=self.sr)\n",
-    "        if len(beat_times) < 2:\n",
+    "        try:\n",
+    "            tempo, beat_frames = librosa.beat.beat_track(y=audio, sr=self.sr)\n",
+    "            beat_times = librosa.frames_to_time(beat_frames, sr=self.sr)\n",
+    "            if len(beat_times) < 2:\n",
+    "                return 0.0\n",
+    "            intervals = np.diff(beat_times)\n",
+    "            return (\n",
+    "                np.mean(intervals)\n",
+    "                if intervals.size > 0 and not np.isnan(intervals).any()\n",
+    "                else 0.0\n",
+    "            )\n",
+    "        except:\n",
     "            return 0.0\n",
-    "        intervals = np.diff(beat_times)\n",
-    "        return np.mean(intervals) if intervals.size > 0 else 0.0\n",
     "\n",
     "    def extract_onset_interval(self, audio):\n",
-    "        onset_frames = librosa.onset.onset_detect(y=audio, sr=self.sr)\n",
-    "        onset_times = librosa.frames_to_time(onset_frames, sr=self.sr)\n",
-    "        if len(onset_times) < 2:\n",
-    "            return 0.0\n",
-    "        intervals = np.diff(onset_times)\n",
-    "        return np.mean(intervals) if intervals.size > 0 else 0.0"
+    "        try:\n",
+    "            onset_frames = librosa.onset.onset_detect(y=audio, sr=self.sr)\n",
+    "            onset_times = librosa.frames_to_time(onset_frames, sr=self.sr)\n",
+    "            if len(onset_times) < 2:\n",
+    "                return 0.0\n",
+    "            intervals = np.diff(onset_times)\n",
+    "            return (\n",
+    "                np.mean(intervals)\n",
+    "                if intervals.size > 0 and not np.isnan(intervals).any()\n",
+    "                else 0.0\n",
+    "            )\n",
+    "        except:\n",
+    "            return 0.0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "2b441b74",
    "metadata": {},
    "outputs": [],
@@ -282,12 +305,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "8035bcb3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process_directory(directory_path, label, batch_size=100, n_jobs=4):\n",
+    "def extract_features(file_path, columns):\n",
+    "    try:\n",
+    "        start_time = time.time()\n",
+    "        audio, sr = librosa.load(file_path, sr=None, mono=True, duration=5.0)\n",
+    "        logging.info(f\"Loaded {file_path} in {time.time() - start_time:.2f} seconds\")\n",
+    "\n",
+    "        if len(audio) < sr:  # Skip if audio is shorter than 1 second\n",
+    "            logging.warning(\n",
+    "                f\"Skipping {file_path}: Audio too short ({len(audio)/sr:.2f} seconds)\"\n",
+    "            )\n",
+    "            return None\n",
+    "\n",
+    "        start_time = time.time()\n",
+    "        extractor = FeatureExtractor(sr=sr)\n",
+    "        features = extractor.extract_features(audio)\n",
+    "        logging.info(\n",
+    "            f\"Extracted features from {file_path} in {time.time() - start_time:.2f} seconds\"\n",
+    "        )\n",
+    "\n",
+    "        flattened_features = {}\n",
+    "        for key, val in features.items():\n",
+    "            if isinstance(val, np.ndarray) and val.size > 1:\n",
+    "                for i, v in enumerate(val):\n",
+    "                    flattened_features[f\"{key}_{i}\"] = v\n",
+    "            else:\n",
+    "                flattened_features[key] = val\n",
+    "\n",
+    "        return flattened_features\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        logging.error(f\"Failed to process {file_path}: {e}\")\n",
+    "        return None\n",
+    "\n",
+    "\n",
+    "def process_directory(directory_path, label, batch_size=3000, n_jobs=4):\n",
     "    audio_files = [\n",
     "        os.path.join(directory_path, f)\n",
     "        for f in os.listdir(directory_path)\n",
@@ -340,15 +397,13 @@
     "\n",
     "        start_time = time.time()\n",
     "        initial_rows = len(df)\n",
-    "        df = df.dropna()\n",
+    "        df = df.fillna(0)\n",
     "        logging.info(\n",
-    "            f\"Dropped {initial_rows - len(df)} rows with NaN values in {time.time() - start_time:.2f} seconds\"\n",
+    "            f\"Replaced NaN values in {initial_rows} rows in {time.time() - start_time:.2f} seconds\"\n",
     "        )\n",
     "\n",
     "        if df.empty:\n",
-    "            logging.warning(\n",
-    "                f\"Batch {i // batch_size + 1} is empty after dropping NaN values\"\n",
-    "            )\n",
+    "            logging.warning(f\"Batch {i // batch_size + 1} is empty after processing\")\n",
     "            continue\n",
     "\n",
     "        start_time = time.time()\n",
@@ -368,7 +423,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_dir = \"processed\"\n",
+    "base_dir = \"../data_processed\"\n",
     "\n",
     "labels = {\n",
     "    \"Male_Twenties\": 0,\n",
@@ -376,7 +431,7 @@
     "    \"Male_Fifties\": 2,\n",
     "    \"Female_Fifties\": 3,\n",
     "}\n",
-    "batch_size = 100  # Keep small for initial timing\n",
+    "batch_size = 100\n",
     "n_jobs = -1\n",
     "\n",
     "for dir_name, label in labels.items():\n",
