fix: preprocessing in the infer workflow

--- a/notebooks/data_preprocessing.ipynb
+++ b/notebooks/data_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "30008c86",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "e18cb36e",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "1a7ac262",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "b0de1592",
    "metadata": {},
    "outputs": [],
@@ -100,6 +100,7 @@
     "def load_audio(file_path, target_sr=16000):\n",
     "    if file_path.lower().endswith(\".mp3\"):\n",
     "        audio = AudioSegment.from_file(file_path, format=\"mp3\").set_channels(1)\n",
+    "        \n",
     "        samples = np.array(audio.get_array_of_samples()).astype(np.float32) / 32768.0\n",
     "        sr = audio.frame_rate\n",
     "        y = librosa.resample(samples, orig_sr=sr, target_sr=target_sr)\n",
@@ -147,17 +148,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "2dd2a408",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found files in ../data: ['.gitkeep', 'common_voice_en_1454.mp3', 'common_voice_en_1470.mp3']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=8)]: Using backend LokyBackend with 8 concurrent workers.\n",
+      "[Parallel(n_jobs=8)]: Done   3 out of   3 | elapsed:    3.2s finished\n"
+     ]
+    }
+   ],
    "source": [
     "folders = [\n",
-    "    (\"../data_batches/Female_Fifties\", \"../processed/Female_Fifties\"),\n",
-    "    (\"../data_batches/Female_Twenties\", \"../processed/Female_Twenties\"),\n",
-    "    (\"../data_batches/Male_Fifties\", \"../processed/Male_Fifties\"),\n",
-    "    (\"../data_batches/Male_Twenties\", \"../processed/Male_Twenties\"),\n",
+    "    (\"../data\", \"../processed/Female_Fifties\"),\n",
+    "    # (\"../data_batches/Female_Twenties\", \"../processed/Female_Twenties\"),\n",
+    "    # (\"../data_batches/Male_Fifties\", \"../processed/Male_Fifties\"),\n",
+    "    # (\"../data_batches/Male_Twenties\", \"../processed/Male_Twenties\"),\n",
     "]\n",
+    "\n",
+    "\n",
     "\n",
     "for input_folder, output_folder in folders:\n",
     "    preprocess_folder(input_folder, output_folder)"
